--- a/VAR and ARIMA EURUSD daily.ipynb
+++ b/VAR and ARIMA EURUSD daily.ipynb
@@ -1,6 +1,59 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Forecast EUR/USD using VAR and ARIMA\n",
+    "\n",
+    "•\t**Data:** We use daily data on EUR/USD, 10yr EU Bund yields, 10yr UST yields, oil prices (WTI), and gold prices (XAU) for the period Jan 4, 2000 – Sep 11, 2023 sourced by Reuters Refinitiv. All data are stationary after taking first differences, according to the ADF test.\n",
+    "\n",
+    "•\t**Model:** At first, we fit a VAR(p) model with the variables mentioned above. The order p is defined using the minimum AIC for $0 <= p <= 10$. We estimate daily forecasts considering nine different windows: 5, 11, 22, 35, 44, 55, 63, 130 and 260 days. We test the last d observations of each sample (where $d$ is the number of days of forecast) after training the first $n-d$ (where $n$ is the total number of days) observations. Afterwards we compare the results with a fitted ARIMA (0,1,0) process, with $p=0$ and $q=0$ defined after observing the autocorrelation and partial autocorrelation (ACF and PACF) functions and $d=1$ because stationarity holds at first differences. To test forecasting accuracy for each forecast window, we use the Mean Absolute Percentage Error (MAPE) criterion:\n",
+    "\n",
+    "$$MAPE = \\frac{1}{d} \\sum^n_{t=1} \\frac{|x_t - \\hat{x}_t|}{x_t}$$\n",
+    "\n",
+    "where $x_t$ is the actual value of EUR/USD, $\\hat{x}_t$ is the forecast at time $t$ and $d$ is the number of days of forecast.\n",
+    "\n",
+    "•\t**Results**: Figure 1 presents daily forecasts of EUR/USD under the VAR and ARIMA for each forecast window, compared with the actual value. Table 1 and Table 2 present the mean value of forecasts and the MAPE criterion for each forecast window under the VAR and ARIMA model respectively. According to the results, the optimal performance of VAR is for a forecast window of 35 days, with MAPE showing a discrepancy between the actual and the projected value by 0.8%. This is also the only forecast window were MAPE for mean forecasts is smaller in the case of VAR compared to the ARIMA forecasts (Figure 2), indicating that overall ARIMA performs better in most cases.\n",
+    "\n",
+    "**Figure 1: Daily forecasts of EUR/USD for each forecast window** \n",
+    "\n",
+    "![forecasts](assets/forecasts_daily.png)\n",
+    "\n",
+    "**Table 1: Mean value of EUR/USD VAR forecasts and relevant MAPE tests**\n",
+    "\n",
+    "| Days of forecast | EUR/USD | EUR/USD forecast with VAR | MAPE |\n",
+    "| --- | --- | --- | --- |\n",
+    "| 5 | 1.07186 | 1.059896 | 0.011157 |\n",
+    "| 11 | 1.078409 | 1.049221 | 0.027099 | \n",
+    "| 22 | \t1.083495 | \t1.118707 | \t0.032624 |\n",
+    "| 35 | 1.089569 | \t1.098181 | \t0.007997 |\n",
+    "| 44 | 1.095098 | \t1.189629 | \t0.088318 |\n",
+    "| 55 | 1.094355 | \t1.016738 | \t0.071172 |\n",
+    "| 63 | 1.093663 | \t0.947646 | \t0.133661 | \n",
+    "| 130 | 1.088331 | \t0.70005\t| 0.355931 | \n",
+    "| 260 | 1.059955 | \t-0.02289 |\t1.002797 | \n",
+    "\n",
+    "**Table 2: Mean value of EUR/USD ARIMA forecasts and relevant MAPE tests**\n",
+    "\n",
+    "| Days of forecast | EUR/USD | EUR/USD forecast with ARIMA | MAPE |\n",
+    "| --- | --- | --- | --- |\n",
+    "| 5 | 1.07186 | 1.077324 | 0.005101 | \n",
+    "| 11 | 1.078409 | 1.080952 | 0.006103 |\n",
+    "| 22 | 1.083495 | 1.097431\t| 0.012964 |\n",
+    "| 35 | 1.089569 | 1.112552\t| 0.021189 |\n",
+    "| 44 | 1.095098\t| 1.100168\t| 0.011798 |\n",
+    "| 55 | 1.094355\t| 1.095913\t| 0.00974 |\n",
+    "| 63 | 1.093663\t| 1.074943\t| 0.01747 |\n",
+    "| 130 | 1.088331 | 1.05993\t| 0.026128 |\n",
+    "| 260 | 1.059955 | 0.993243\t| 0.064704 |\n",
+    "\n",
+    "**Figure 2: MAPE criterion for mean forecasts using VAR and ARIMA**\n",
+    "\n",
+    "![MAPE](assets/MAPE.png)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
