VAR and ARIMA EURUSD daily.ipynb

--- a/VAR and ARIMA EURUSD daily.ipynb
+++ b/VAR and ARIMA EURUSD daily.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Forecast EUR/USD using VAR and ARIMA\n",
+    "# Forecasting EUR/USD using VAR and ARIMA\n",
     "\n",
     "•\t**Data:** We use daily data on EUR/USD, 10yr EU Bund yields, 10yr UST yields, oil prices (WTI), and gold prices (XAU) for the period Jan 4, 2000 – Sep 11, 2023 sourced by Reuters Refinitiv. All data are stationary after taking first differences, according to the ADF test.\n",
     "\n",
